CMSC-907 - FindBugs: improved code: removed unneeded code - added File IO closing methods - improved equals on String
git-svn-id: https://scm.mmbase.org/mmbase/trunk@29834 91430c5f-d668-0410-9e7d-dd663366dcfd